--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
 </head>
 <body>
    <div class="element">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ipsa, illum!</div>
-   
+   <section class="Alivio">Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatem laborum sunt tempora possimus quos minus molestias recusandae sed ratione maxime quis iusto, numquam, nostrum repellat similique consectetur praesentium quaerat id?</section>
+<section class="f">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Accusantium eos omnis voluptas officia modi debitis, dolores inventore aliquam esse ipsa.</section>
+<section class="lets">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Vero veniam quos reprehenderit eveniet, quasi inventore maiores praesentium repudiandae labore obcaecati.</section>
+<section class="footer">Lorem ipsum dolor sit amet consectetur adipisicing elit. Incidunt officiis dolore enim laborum excepturi consectetur esse ut reprehenderit architecto tempora?</section>
 </body>
 </html>
